# casm_viewer

./: .gitignore  .gitmodules  CMakeLists.txt  app_config.cmake  casm_tinc.py  compile.sh  debug.sh  distclean  readme.md  run.sh
.github/workflows/: github-actions.yml
jupyter/: CASM Docker.ipynb  CASM Viewer.ipynb  ECI Explorer.ipynb  Grand Canonical Datasets.ipynb  Voltage_sweep_casm_viewer.ipynb  Voltagesweep_hopdisplay_peratomtrack.ipynb  Workflow.ipynb
python/: analyze_parameter_space.py  analyze_shell_site_files.py  clean_parameter_space.py  extract_transfmat.py  test.py  tinc_kmc_paths_perco.py  tinc_script.py
python/graphing/: plot.py  plot_multi.py
python/reassign_occs/: README.txt  extract_nc_from_trajectory_gzip.py  poscar.py  reassign_occs.py  result_extractor.py  template_creator.py
res/: Info.plist  myrioi-windows.rc
res/macos/: myrioi_icon.icns  run
src/: al_DataScript.cpp  al_DataScript.hpp  al_DeferredComputation.hpp  al_PeriodicTask.hpp  al_VASPReader.cpp  al_VASPReader.hpp  al_VASPRender.hpp  app_config.cmake  casm_viewer.toml  datadisplay.cpp  datadisplay.hpp  datasetmanager.cpp  datasetmanager.hpp  distributed_app.toml  eci_explorer.cpp  instanced_mesh.hpp  main.cpp  modalsynth.cpp  modalsynth.hpp  parameterspace.cpp  parameterspace.hpp  processors.hpp  readme.md  slice.cpp  slice.hpp  vasptest.cpp
tinc/: CASM Viewer.ipynb
